frontend/test/should_fail/array_map_index_graph_element.grg
test array_map(ref a:array<int>) {
	if {
		a.map<int>{idx:Node -> value:int -> value}.empty();
	}	
}
